added pages and css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Truly United Sports</title>
+
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-  
+<div class="wrapper">
+  <header>
+    <h1>Truly United Sports</h1>
+  </header>
+
+  <li><a href="index.html"></a></li>
+  <li><a href="youtube.html"></a></li>
+  <li><a href="tiktok.html"></a></li>
+
+
+
+</div>
 </body>
 </html>
