new header and nav bar

--- a/tiktok.html
+++ b/tiktok.html
@@ -3,13 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Truly United Sports</title>
+  <title>Truly United</title>
+
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <div class="wrapper">
+<div class="wrapper">
+
+  <header>
+    <h1><img src="Truly United Logo.PNG" alt=""></h1> 
+
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tiktok.html">Tiktok</a></li>
+        <li><a href="youtube.html">Youtube</a></li>
+      </ul>
+    </nav>
 
     
+    <p>
+
+    </p>
+ 
+
+
 </div>
 </body>
 </html>
