--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Truly United Sports</title>
+  <title>Truly United</title>
 
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
@@ -11,14 +11,24 @@
 
 <body>
 <div class="wrapper">
+
   <header>
-    <h1>Truly United Sports</h1>
-  </header>
+    <h1><img src="Truly United Logo.PNG" alt=""></h1> 
 
-  <li><a href="index.html"></a></li>
-  <li><a href="youtube.html"></a></li>
-  <li><a href="tiktok.html"></a></li>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tiktok.html">Tiktok</a></li>
+        <li><a href="youtube.html">Youtube</a></li>
+      </ul>
+    </nav>
+  
 
+  <p>
+  
+  </p>
+ 
 
 
 </div>
