--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <div class="wrapper">
 
   <header>
-    <h1><img src="Truly United Logo.PNG" alt=""></h1> 
-
+    <h1>Truly United</h1> 
+    <img src="Truly United Logo.PNG" alt="headerimage"class= headerimage>
     </header>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,13 +25,15 @@
       </ul>
     </nav>
   
+    <main>
 
+      <h1></h1>
   <p>
-  
+    
   </p>
  
 
-
+</main>
 </div>
 </body>
 </html>
