--- a/tiktok.html
+++ b/tiktok.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
 
   <header>
-    <h1><img src="Truly United Logo.PNG" alt=""></h1> 
+    <h1>Truly United</h1> 
 
     </header>
     <nav>
@@ -26,7 +26,7 @@
 
     
     <p>
-
+      
     </p>
  
 
