--- a/tiktok.html
+++ b/tiktok.html
@@ -14,23 +14,32 @@
 
   <header>
     <h1>Truly United</h1> 
-
+    <img src="Truly United Logo.PNG" alt="headerimage"class= headerimage>
     </header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tiktok.html">Tiktok</a></li>
         <li><a href="youtube.html">Youtube</a></li>
+        <li><a href="discord.html">Discord</a></li>
       </ul>
     </nav>
 
-    
+    <main>
+      <h1>TikTok</h1>
     <p>
-      
+      The TikTok will be a place to find short clips from the podcasts posted on the Youtube channel, along with short analysis clips of sporting events that took place beforehand. After we gain access to going live on the platform we will be doing that as well. For the time being this page will just have clips and will provide a link to the full episode on Youtube.
+
+    <ul><a href="">Truly United TikTok</a></ul>
+    </p>
+    <h1>Recommendations</h1>
+
+    <p>
+      As a community you are more than welcome to send in requests for us to go over certain games that you are interested in us covering. Feel free to send messages on TikTok or in the Discord channels! We are open to give advice on the betting lines for each game and we will be making on our own predictions weekly for the main football games. Just remember to gamble responsibly. There will be ten games selected each week that we will focus on. 
     </p>
  
 
-
+</main>
 </div>
 </body>
 </html>
