--- a/youtube.html
+++ b/youtube.html
@@ -14,7 +14,7 @@
 
   <header>
     <h1>Truly United</h1> 
-
+    <img src="Truly United Logo.PNG" alt="headerimage"class= headerimage>
     </header>
     <nav>
       <ul>
@@ -24,13 +24,23 @@
       </ul>
     </nav>
 
+    <main>
+      <h1>Episodes</h1>
+
+    <p>
+      In this episode, hosts Daniel Garrett and Mitch Wolfe discuss the 2026 OL Class. They give their top tens for OT and iOL, and also give out superlatives.
+      <ul><a href="https://www.youtube.com/watch?v=bKxkPsiWpgw&t=3s">2026 OL Class Podcast</a></ul>
+    </p>
+    <figure><img src="Truly Podcast Logo.png" alt=""></figure>
+
     
     <p>
-
+    Scouting episodes will be uploaded prior to the college football season, where we will go over players that will are predicted to declare for the upcoming NFL draft. This year we got a late start on it so we focused on offensive tackles and interior offensive line. Next year we will look at more players. 
     </p>
+
  
 
-
+</main>
 </div>
 </body>
 </html>
