--- a/discord.html
+++ b/discord.html
@@ -38,8 +38,8 @@
   <p>
     There are two options for when joining a channel, there is one that will just be posting announcements to let you know when a new video has been uploaded or a live stream has occurred and there is a seperate channel that will allow you to talk to others in the community, along with joining in on debates on topics such as sports, politics and other news with other community members. All we ask is that you are polite and mindful of the others in the community. The Declaration of Dependence is the server that has the option to debate with other members or to talk to us about issues you may be having in life and are looking for support or guidance!
     
-    <ul><a href="">Truly United</a></ul>
-    <ul><a href="">Declaration of Dependence!</a></ul>
+    <ul><a href="https://discord.com/channels/1424923414929473598/1424923416216993813">Truly United</a></ul>
+    <ul><a href="https://discord.com/channels/1399076384558813214/1399076385783414866">Declaration of Dependence!</a></ul>
   </p>
 
 
