--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   </p>
 
   <h1>Links</h1>
-  <p>
-    <ul>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-    </ul>
-  </p>
+    
+  <ul><a href="https://discord.com/channels/1424923414929473598/1424923416216993813">Discord</a></ul>
+
+  <ul><a href="https://www.tiktok.com/@trulyunited_">TikTok</a></ul>
+
+  <ul><a href="https://www.youtube.com/@Truly_United">Youtube</a></ul>
+
  
 
 </main>
