--- a/tiktok.html
+++ b/tiktok.html
@@ -30,7 +30,7 @@
     <p>
       The TikTok will be a place to find short clips from the podcasts posted on the Youtube channel, along with short analysis clips of sporting events that took place beforehand. After we gain access to going live on the platform we will be doing that as well. For the time being this page will just have clips and will provide a link to the full episode on Youtube.
 
-    <ul><a href="">Truly United TikTok</a></ul>
+    <ul><a href="https://www.tiktok.com/@trulyunited_">Truly United TikTok</a></ul>
     </p>
     <h1>Recommendations</h1>
 
