--- a/youtube.html
+++ b/youtube.html
@@ -21,6 +21,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tiktok.html">Tiktok</a></li>
         <li><a href="youtube.html">Youtube</a></li>
+        <li><a href="discord.html">Discord</a></li>
       </ul>
     </nav>
 
@@ -30,8 +31,9 @@
     <p>
       In this episode, hosts Daniel Garrett and Mitch Wolfe discuss the 2026 OL Class. They give their top tens for OT and iOL, and also give out superlatives.
       <ul><a href="https://www.youtube.com/watch?v=bKxkPsiWpgw&t=3s">2026 OL Class Podcast</a></ul>
+      <img src="Truly Podcast Logo.png" alt="truly podcast logo" class="podcast-logo">
     </p>
-    <figure><img src="Truly Podcast Logo.png" alt=""></figure>
+    
 
     
     <p>
