--- a/youtube.html
+++ b/youtube.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
 
   <header>
-    <h1>Truly United</h1> 
+    <h1>Truly United Podcast</h1> 
     <img src="Truly United Logo.PNG" alt="headerimage"class= headerimage>
     </header>
     <nav>
@@ -38,6 +38,7 @@
     
     <p>
     Scouting episodes will be uploaded prior to the college football season, where we will go over players that will are predicted to declare for the upcoming NFL draft. This year we got a late start on it so we focused on offensive tackles and interior offensive line. Next year we will look at more players. 
+    <ul><a href="https://www.youtube.com/@Truly_United">Truly United Youtube</a></ul>
     </p>
 
  
