added footer modified body

--- a/tiktok.html
+++ b/tiktok.html
@@ -40,6 +40,10 @@
  
 
 </main>
+<footer>
+Truly United Podcast
+<img class="footerimage" src="background.PNG" alt="podcast logo">
+</footer>
 </div>
 </body>
 </html>
