--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <h1>Truly United Podcast</h1> 
-    <img src="Truly United Logo.PNG" alt="headerimage"class= headerimage>
+    <img src="Truly United Logo.PNG" alt="headerimage"class=headerimage>
     </header>
 
     <nav>
@@ -27,12 +27,14 @@
     </nav>
   
     <main>
-      <section class="left-column">
+      
       <h1>About Us</h1>
   <p>
     Truly United is an up and coming podcast that will cover mostly sports, along with other news around politics and interest points for the community. If you are interested in joining in on the debates or would like us to discuss a certian matter, please look into joining the discord channel and following the Tik Tok page and Youtube channel!
   </p>
-  </section>
+ 
+
+  
   <h2>Coming soon</h2>
   <p>
     In the near future, we are planning to look into covering ESports, along with hosting our own tournaments. The discord channel will have more information on this as we get settled in with hosting them and figuring out the best schedule for everyone.
@@ -41,6 +43,7 @@
   <p>
     At a further date in the future we will begin live streaming on Twitch and Tik Tok, as we gain a larger following. This will be announced at a later date. 
   </p>
+  
 
   <h1>Links</h1>
     
@@ -53,6 +56,11 @@
  
 
 </main>
+
+<footer>
+Truly United Podcast
+<img class="footerimage" src="background.PNG" alt="podcast logo">
+</footer>
 </div>
 </body>
 </html>
