added anotehr page, added content to articles page

--- a/tiktok.html
+++ b/tiktok.html
@@ -22,6 +22,7 @@
         <li><a href="tiktok.html">Tiktok</a></li>
         <li><a href="youtube.html">Youtube</a></li>
         <li><a href="discord.html">Discord</a></li>
+        <li><a href="articles.html">Articles</a></li>
       </ul>
     </nav>
 
