--- a/discord.html
+++ b/discord.html
@@ -23,6 +23,7 @@
         <li><a href="tiktok.html">Tiktok</a></li>
         <li><a href="youtube.html">Youtube</a></li>
         <li><a href="discord.html">Discord</a></li>
+        <li><a href="articles.html">Articles</a></li>
       </ul>
     </nav>
   
