--- a/articles.html
+++ b/articles.html
@@ -43,6 +43,7 @@
 
   <p>
     The Browns could end up getting a very good draft pick in next years draft, but my prediction on their season would have them ending the season with a 5-12 record, netting them one of the worst records and obtaining a top 3 pick in next years draft where they will probably draft another quarterback.
+    <i>-Dylan Case</i>
   </p>
   
 
