added video links; corrected grammer

--- a/articles.html
+++ b/articles.html
@@ -42,7 +42,7 @@
   </p>
 
   <p>
-    The Browns could end up getting a very good draft pick in next years draft, but my prediction on their season would have them ending the season with a 5-12 record, netting them one of the worst records and obtaining a top 3 pick in next years draft where they will probably draft another quarterback.
+    The Browns could end up getting a very good draft pick in next year's draft, but my prediction on their season would have them ending the season with a 5-12 record, netting them one of the worst records and obtaining a top 3 pick in next year's draft where they will probably draft another quarterback.
     <i>-Dylan Case</i>
   </p>
   
